services/nextcloud/base/service.yaml
---
# Source: nextcloud/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  - name: metrics
    port: 9205
    targetPort: metrics
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: app
