services/nextcloud/base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nextcloud.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
      middlewares:
        - name: redirect-https
        - name: nextcloud-caldav
        - name: nextcloud-webfinger
        - name: nextcloud-host-meta
        - name: nextcloud-host-meta-json
        - name: nextcloud-deny-1
        - name: nextcloud-deny-2
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-tls
  annotations:
    dashboard.zippelf.com/scrape: "true"
    dashboard.zippelf.com/logo: "https://avatars1.githubusercontent.com/u/3380462?s=200&v=4"
    dashboard.zippelf.com/display-name: "nextcloud"
    dashboard.zippelf.com/docs: "https://prometheus.io/docs/alerting/latest/nextcloud/"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-nextcloud-ingress
  routes:
    - match: Host(`nextcloud.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
      middlewares:
        - name: nextcloud-caldav
        - name: nextcloud-webfinger
        - name: nextcloud-host-meta
        - name: nextcloud-host-meta-json
        - name: nextcloud-deny-1
        - name: nextcloud-deny-2
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-caldav
spec:
  replacePathRegex:
    regex: ^/.well-known/ca(l|rd)dav
    replacement: /remote.php/dav/
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-webfinger
spec:
  replacePathRegex:
    regex: ^/.well-known/webfinger
    replacement: /public.php?service=webfinger
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-host-meta
spec:
  replacePathRegex:
    regex: ^/.well-known/host-meta
    replacement: /public.php?service=host-meta
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-host-meta-json
spec:
  replacePathRegex:
    regex: ^/.well-known/host-meta.json
    replacement: /public.php?service=host-meta-json
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-deny-1
spec:
  replacePathRegex:
    regex: ^/(?:build|tests|config|lib|3rdparty|templates|data)/
    replacement: /
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-deny-2
spec:
  replacePathRegex:
    regex: ^/(?:autotest|occ|issue|indie|db_|console)
    replacement: /
